{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "Camera",
            "id": "b935517b-3c18-4c75-bf9b-520fb3e56e84",
            "actions": [
                {
                    "name": "TouchPosition",
                    "type": "Button",
                    "id": "57c32ec3-245d-4a73-8d92-a1c8b400e3e7",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "TouchDelta",
                    "type": "Button",
                    "id": "f31a1caa-8a71-4247-b441-f0a5700b81fe",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "6d766e21-e07a-4887-9957-6ac819f75a80",
                    "path": "<Touchscreen>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "547463cd-1789-4a22-871a-556e7d679069",
                    "path": "<Touchscreen>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchDelta",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}